tests/fixtures/valid/if_assign_slot.torel
unit fixtures.if_assign_slot;

export proc main() -> Int32 {
    slot answer: Int32 = 0;

    if true {
        answer = 1;
    } else {
        answer = 2;
    }

    return answer;
}
